--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "node-id": "^1.0.18",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-lazyload": "^2.6.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.3"
