--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "node-id": "^1.0.18",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
