--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,9 @@
   "name": "Countrify",
   "icons": [
     {
-      "src": "w1.png",
-      "type": "image/png",
-      "sizes": "128x128"
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     },
     {
       "src": "w1.png",
